--- a/.env.example
+++ b/.env.example
@@ -1,40 +1,62 @@
+# ===========================
 # Configurações do Servidor
+# ===========================
 PORT=5000
 NODE_ENV=development
 
 # Nome e URL base da aplicação
-APP_NAME=
+APP_NAME=WorkMatch
 API_URL=http://localhost:5000
 FRONTEND_URL=http://localhost:3000
 
+# ===========================
 # Configuração do CORS
+# ===========================
 CORS_ORIGIN=http://localhost:3000
 
-# Database
-DATABASE_URL=
+# ===========================
+# Banco de Dados (MongoDB)
+# ===========================
+# Local:
+# MONGO_URI=mongodb://127.0.0.1:27017/workmatch_db
+# Atlas (exemplo):
+# MONGO_URI=mongodb+srv://<usuario>:<senha>@cluster0.mongodb.net/workmatch_db?retryWrites=true&w=majority
+MONGO_URI=
 
+# ===========================
 # Autenticação / JWT
+# ===========================
 JWT_SECRET=
 JWT_EXPIRATION=7d
 
+# ===========================
 # Rate Limiting
+# ===========================
 RATE_LIMIT_WINDOW=15
 RATE_LIMIT_MAX=100
 
+# ===========================
 # Upload de arquivos
+# ===========================
 UPLOAD_FOLDER=uploads
 MAX_FILE_SIZE=5242880
 
+# ===========================
 # E-mail
-EMAIL_HOST=
-EMAIL_PORT=
+# ===========================
+EMAIL_HOST=smtp.gmail.com
+EMAIL_PORT=587
 EMAIL_USER=
 EMAIL_PASS=
-EMAIL_FROM=
+EMAIL_FROM="WorkMatch <noreply@workmatch.com>"
 
+# ===========================
 # Logs
+# ===========================
 LOG_LEVEL=debug
 
+# ===========================
 # Variáveis específicas da aplicação
+# ===========================
 MAX_ITEMS_PER_PAGE=10
 SESSION_SECRET=
