--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
-# ===========================
+# ==========================================
 # Configurações do Servidor
-# ===========================
+# ==========================================
 PORT=5000
 NODE_ENV=development
 
@@ -9,54 +9,64 @@ APP_NAME=WorkMatch
 API_URL=http://localhost:5000
 FRONTEND_URL=http://localhost:3000
 
-# ===========================
+# ==========================================
 # Configuração do CORS
-# ===========================
+# ==========================================
+# URL permitida para requisições (frontend)
 CORS_ORIGIN=http://localhost:3000
 
-# ===========================
+# ==========================================
 # Banco de Dados (MongoDB)
-# ===========================
-# Local:
+# ==========================================
+# Exemplo local:
 # MONGO_URI=mongodb://127.0.0.1:27017/workmatch_db
-# Atlas (exemplo):
+
+# Exemplo Atlas (nuvem):
 # MONGO_URI=mongodb+srv://<usuario>:<senha>@cluster0.mongodb.net/workmatch_db?retryWrites=true&w=majority
+
 MONGO_URI=
 
-# ===========================
+# ==========================================
 # Autenticação / JWT
-# ===========================
+# ==========================================
+# Chave secreta usada para assinar tokens JWT
 JWT_SECRET=
+# Duração do token (ex: 7d = 7 dias)
 JWT_EXPIRATION=7d
 
-# ===========================
-# Rate Limiting
-# ===========================
+# ==========================================
+# Rate Limiting (Proteção contra abuso)
+# ==========================================
+# Janela de tempo em minutos
 RATE_LIMIT_WINDOW=15
+# Máximo de requisições permitidas na janela
 RATE_LIMIT_MAX=100
 
-# ===========================
+# ==========================================
 # Upload de arquivos
-# ===========================
+# ==========================================
 UPLOAD_FOLDER=uploads
+# Tamanho máximo de arquivo (5 MB = 5242880 bytes)
 MAX_FILE_SIZE=5242880
 
-# ===========================
-# E-mail
-# ===========================
+# ==========================================
+# E-mail (para notificações, recuperação etc)
+# ==========================================
 EMAIL_HOST=smtp.gmail.com
 EMAIL_PORT=587
 EMAIL_USER=
 EMAIL_PASS=
 EMAIL_FROM="WorkMatch <noreply@workmatch.com>"
 
-# ===========================
+# ==========================================
 # Logs
-# ===========================
+# ==========================================
+# Nível de detalhe do log: error, warn, info, debug
 LOG_LEVEL=debug
 
-# ===========================
-# Variáveis específicas da aplicação
-# ===========================
+# ==========================================
+# ⚙️ Variáveis específicas da aplicação
+# ==========================================
 MAX_ITEMS_PER_PAGE=10
+# Segredo adicional usado em sessões, cookies, etc
 SESSION_SECRET=
